# Waterfall-Claude-OS

./: .gitignore  CLAUDE.md  LOVABLE_MASTER_PROMPT.md  README.md  RTAi_LOVABLE_MASTER_PROMPT.md  render.yaml
.agents/skills/cairo-global-asset-manager/: SKILL.md
.agents/skills/ci-cd-conventions/: SKILL.md
.agents/skills/github-webhook-security/: SKILL.md
.claude/agents/: audio-measurement-reviewer.md  live-sound-tuning-advisor.md  network-audio-integration-architect.md
.github/workflows/: auto-merge.yml  ci.yml  deploy-fly.yml  pr.yml
assets/global/: README.md  registry.json
audio-analyzer/: README.md
audio-analyzer/bridge/: README.md  package-lock.json  package.json  tsconfig.json
audio-analyzer/docs/: api.md  architecture.md  console-integration.md  editions.md  features.md  integration-architecture.md  integration-audio-interfaces.md  measurement-modes.md  mobile-optimization.md  network-audio.md  privacy-and-data.md  ux-design.md  workflows.md
audio-analyzer/frontend/: .gitignore  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
auto-shorts/: .dockerignore  .env.example  README.md  docker-compose.yml  fly.toml  lovable-capabilities-prompt.txt  lovable-cloud-backend-prompt.txt  lovable-master-prompt.txt  render.yaml
auto-shorts/backend/: package-lock.json  package.json  tsconfig.json
auto-shorts/frontend/: package-lock.json  package.json
auto-shorts/infra/: DEPLOY.md  docker-compose.prod.yml
auto-shorts/render-worker/: README.md  pyproject.toml
auto-shorts/render-worker/src/render_worker/: __init__.py  __main__.py  app.py  consumer.py  ffmpeg.py  ingest.py  models.py  objectstore.py  transcribe.py  worker.py
auto-shorts/render-worker/tests/: test_app.py  test_consumer.py  test_ffmpeg.py  test_models.py  test_objectstore.py  test_schema.py  test_worker.py
waterfall-skills/: README.md  build.sh  install.sh
(+331 files in other folders)
