[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-shorts-render-worker"
version = "0.1.0"
description = "Auto-Shorts render worker — Whisper transcription + FFmpeg/MoviePy rendering."
requires-python = ">=3.11"
# Core runtime deps are intentionally light so CI installs fast. FastAPI powers
# the HTTP service the backend calls; heavier, optional backends (Whisper,
# ffmpeg, yt-dlp, redis) live in extras and are loaded lazily.
dependencies = ["fastapi>=0.110", "pydantic>=2.0"]

[project.optional-dependencies]
whisper = ["faster-whisper>=1.0"]
ingest = ["yt-dlp>=2024.0"]
redis = ["redis>=5.0"]
server = ["uvicorn>=0.30"]
dev = ["pytest>=8.0", "ruff>=0.6", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
